# backend_vercel

./: .gitignore  README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  database.py
app/api/: __init__.py  auth.py  meeting.py  participant.py  place.py  place_candidate.py  place_vote.py  review.py  time_candidate.py  time_vote.py  user.py
app/crud/: __init__.py  meeting.py  meeting_time_candidate.py  participant.py  place.py  place_candidate.py  place_vote.py  review.py  time_vote.py  user.py
app/models/: __init__.py  meeting.py  meeting_time_candidate.py  participant.py  place.py  place_candidate.py  place_vote.py  review.py  time_vote.py  user.py
app/schemas/: __init__.py  auth.py  meeting.py  meeting_time_candidate.py  participant.py  place.py  place_candidate.py  place_vote.py  review.py  time_vote.py  user.py
app/services/: kakao.py
docs/: API_DOCS.md  API_LIST.md  ERD.md  KAKAO_LOGIN_GUIDE.md
