[project]
name = "easymoim-backend"
version = "1.0.0"
description = "EasyMoim 백엔드 API"
requires-python = "==3.9.*"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "httpx==0.25.2",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]


