[project]
name = "easymoim-backend"
version = "1.0.0"
description = "EasyMoim 백엔드 API"
requires-python = "==3.11.*"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "pydantic==1.10.18",
    "sqlalchemy==2.0.23",
    "pg8000==1.30.3",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "httpx==0.25.2",
]
